fix spacing

--- a/style/main.css
+++ b/style/main.css
@@ -7,27 +7,28 @@
 
 body {
     background-color: #F2F2F2;
-    font-family: 'Raleway', sans-serif;
-    margin: 5px;
+    font-family: 'Montserrat', sans-serif;
+    margin: 15px;
 
 }
 
 span {
     font-size: large;
-    letter-spacing: .05em;
+    letter-spacing: 0.15em;
     font-size: 14pt;
     color: #CCB166;
-    font-weight: lighter;
+    font-weight: bolder;
 }
 
 img {
     margin-bottom: 10px;
-    max-width: 100vw;
+    max-width: 90vw;
+    height: auto;
 }
 
 .center {
     position: fixed;
-    top: 50%;
+    top: 40%;
     left: 50%;
     text-align: center;
     /* bring your own prefixes */
